# Sandick

./: .gitignore  .solhint.json  GO-LIVE.md  README.md  TODO.md  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: deploy.example.json  prices.example.json  sandick.basket.json
contracts/: README.md  slither.config.json
contracts/src/: BasketVault.sol  BasketVaultBase.sol  HyperCoreReader.sol  SandickVault.sol  SandickVaultBase.sol  VaultFactory.sol
contracts/src/interfaces/: ICoreWriter.sol  IHyperCoreReader.sol
contracts/src/lib/: HyperCoreActions.sol
contracts/test/: invariant.test.js  vault.test.js
contracts/test/mocks/: MockBasketVault.sol  MockCore.sol  MockCoreWriter.sol  MockERC20.sol  MockMarginSummary.sol  MockSandickVault.sol  MockSpotBalance.sol
docs/: INCIDENT_AND_SHUTDOWN.md  LAUNCH_SIGNOFF.md  RISK_REGISTER.md  depositor-guide.md  risk-disclosures.md  testnet-signoff.md
docs/ops/: KEY_ROTATION_POLICY.md  MONITORING_POLICY.md  RECOVERY_DRILL_RUNBOOK.md  ROLE_AND_CUSTODY_POLICY.md
docs/protocol/: COREWRITER_ACTION_MATRIX.md  MARKET_SUITABILITY.md  PRECOMPILE_SAFETY.md
docs/security/: README.md  SECURITY_TEST_PLAN.md  THREAT_MODEL.md
frontend/: README.md  app.js  chain.js  config.js  index.html  styles.css
sandick/: __init__.py  admin.py  allocator.py  basket.py  cli.py  deploy_config.py  discovery.py  exec_cli.py  execute.py  keeper.py  keeper_bot.py  keeper_chain.py  keeper_cli.py  keeper_guard.py  onchain.py  plan.py  prices.py  rebalance.py  safety.py  weights.py
scripts/: compile.js  compile_contracts.js  coverage.js  coverage_run.js  deploy.js  evm.js  static_analysis.sh
tests/: conftest.py  test_admin_cli.py  test_allocator.py  test_basket.py  test_cli.py  test_deploy_config.py  test_discovery.py  test_exec_cli.py  test_execute.py  test_frontend_parity.py  test_keeper.py  test_keeper_bot.py  test_keeper_chain.py  test_keeper_cli.py  test_keeper_guard.py  test_onchain.py  test_plan_and_leverage.py  test_prices.py  test_rebalance.py  test_safety.py  test_weights.py
