[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sandick"
version = "0.1.0"
description = "Equal-weighted HIP-3 basket vault tooling for the SANDICK basket on Hyperliquid."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
live = ["hyperliquid-python-sdk>=0.24.0"]
dev = ["pytest>=8.0", "ruff>=0.5"]

[project.scripts]
sandick = "sandick.cli:main"

[tool.setuptools]
packages = ["sandick"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
# pyflakes (F), pycodestyle errors (E), isort (I).
select = ["F", "E", "I"]
ignore = ["E501"]  # line length handled by the formatter, not enforced hard
