[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sandick"
version = "0.1.0"
description = "Equal-weighted HIP-3 basket vault tooling for the SANDICK basket on Hyperliquid."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
live = ["hyperliquid-python-sdk>=0.24.0"]
# Keeper bot live adapter: EVM reads/writes against the deployed vault. Pair with
# `live` for the Hyperliquid market-data (positions/prices) source.
keeper = ["web3>=6", "eth-account>=0.11"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.5"]

[project.scripts]
sandick = "sandick.cli:main"
sandick-keeper = "sandick.keeper_cli:main"

[tool.setuptools]
packages = ["sandick"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
# pyflakes (F), pycodestyle errors (E), isort (I).
select = ["F", "E", "I"]
ignore = ["E501"]  # line length handled by the formatter, not enforced hard

[tool.coverage.run]
source = ["sandick"]
branch = true

[tool.coverage.report]
# Lines that legitimately need a live node or are unreachable in tests.
exclude_also = [
    "if __name__ == .__main__.:",
    "pragma: no cover",
]
# Guard against coverage regressions without demanding the SDK-boundary glue.
fail_under = 90
show_missing = true
